<resources>
    <string name="app_name">KoksownikF</string>
    <string name="preferencesFragmentTag">preferencesFragmentTag</string>
    <string name="directory">Directory</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="set">Set</string>
    <string name="tet">Tet</string>
    <string name="backup">Create backup</string>
    <string name="import_backup">Import backup</string>
    <string name="no_ext_storage">External storage is not available</string>
    <string name="backup_fail">Failed to backup file: </string>
    <string name="backup_success">Backup done successfully</string>
    <string name="import_backup_success">Import of backup done successfully</string>
    <string name="save_succes">Data saved successfully</string>
    <string name="ten_kilo">10kg</string>
    <string name="error_occurred">Error occured</string>
    <string name="ok">OK</string>
    <string name="plus">+</string>
    <string name="file_no_exists">Attempt to open file failed because it does not exist.</string>
    <string name="file_corrupted">Attempt to open file failed because it is corrupted.</string>
    <string name="file_unknown_error">Attempt to open file failed because of unknown error.</string>
    <string name="file_creation_failure">Failed to create data file because of unknown error.</string>
    <string name="internal_error">Internal error occurred. Please restart application if this message repeats.</string>
    <string name="failure">Failure</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="remove_node">Are you sure you want to delete node?</string>
    <string name="general_failure">Application may not work correctly because of data file parsing errors. Make sure application has needed privileges.</string>
    <string name="no_parent">Parent should not be null.</string>
    <string name="use_external">Use external storage</string>
    <string name="use_external_summary">Use external storage</string>
    <string name="save_logs">Logs saving</string>
    <string name="save_logs_summary">Creates logs on data save for debugging purposes.</string>
    <string name="backup_dir_name">backup</string>
    <string name="backup_dir_creating_failure">Failed to create backup dir on sdcard</string>
    <string name="dialog_key_hint">Enter your license key:</string>
    <string name="dialog_key_editboxHint">XXXXX-XXXXX-XXXXX-XXXXX</string>
    <string name="dialog_key_tag">securitykeyDialog</string>
    <string name="dialog_key_license_ver">License verification</string>
    <string name="dialog_eula_tip">BY ENTERING LICENSE KEY YOU CONSENT TO BE BOUND BY THE TERMS AND CONDITIONS OF EULA</string>
    <string name="dialog_eula_open">Click to show EULA</string>
    <string name="dialog_eula_agree">I agree to EULA</string>
    <string name="dialog_missing_permsTitle">Missing permissions</string>
    <string name="dialog_missing_perms">Application is missing required permissions</string>
</resources>
