<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eulaTip_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_eula_tip"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/showEula_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/dialog_eula_open" />

    <TextView
        android:id="@+id/hintLabel_keyDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_key_hint"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/keyEditBox_keyDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp"
        android:hint="@string/dialog_key_editboxHint"
        android:inputType="textVisiblePassword"
        android:maxLength="23"
        android:maxLines="1"
        android:textAlignment="center" />
</LinearLayout>