<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".02"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".85"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/dialog_add_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/path"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        />

    <EditText
        android:id="@+id/dialog_add_editText"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_add_TextView"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_TextView"
        app:layout_constraintHorizontal_bias="0.4" />

    <Button
        android:id="@+id/dialog_add_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dialog_add_editText"
        android:layout_below="@+id/dialog_add_editText"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/dialog_add_CheckBox"
        android:text="@string/add"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_editText" />

    <CheckBox
        android:id="@+id/dialog_add_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directory"
        android:layout_alignBottom="@+id/dialog_add_Button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_editText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline" />

</android.support.constraint.ConstraintLayout>